--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,7 @@ params {
     genome = "/projectnb/bf528/materials/project-3-chipseq/refs/GRCh38.primary_assembly.genome.fa"
     gtf = "/projectnb/bf528/materials/project-3-chipseq/refs/gencode.v45.primary_assembly.annotation.gtf"
     window = 2000
-    //corrtype = 'pearson'
-    //corrtype = 'spearman'
+    corrtype = 'pearson'
 
     samplesheet = "$projectDir/full_samplesheet.csv"
     subsampled_samplesheet = "$projectDir/subsampled_samplesheet.csv"
@@ -46,7 +45,7 @@ profiles {
                 }
                 
                 withLabel: process_high {
-                    cpus = 16
+                    cpus = 20
                 }
         }
     }
